scripts: add benchmark stats

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -396,7 +396,7 @@ if(NOT UNIX)
 endif()
 
 if(WITH_BENCHMARKS)
-    set(benchmark_repeats "5")
+    set(benchmark_repeats "20")
     set(benchmark_command "${CMAKE_SOURCE_DIR}/build/scripts/benchmark.linux.sh")
     set(benchmark_directory "${stage_test_data_dir}/benchmarks/actual")
     set(benchmark_prefix "")
@@ -404,6 +404,7 @@ if(WITH_BENCHMARKS)
         make_directory("${benchmark_directory}")
     endif()
 
+    add_custom_target(benchmark_stats)
     add_custom_target(benchmark_all)
     add_custom_target(ba)
     add_dependencies(ba benchmark_all)
