--- a/.travis.yml
+++ b/.travis.yml
@@ -25,8 +25,6 @@ git:
   depth: 5
 
 matrix:
-  allow_failures:
-    - os: osx
   include:
     - os: osx
       compiler: clang
@@ -61,14 +59,16 @@ install:
 script:
   - JOBS=2
   - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then
-        export TARGET="package run_all_tests";
+        export TARGET="run_all_tests";
         export THIRD_PARTY="/tmp/dogen_deps/dogen_deps_gcc_5.3_linux_amd64";
     fi
   - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then
         export THIRD_PARTY="/tmp/dogen_deps/dogen_deps_clang_7_3_0_osx_amd64";
-        export TARGET="package";
+        export TARGET="";
     fi
   - ${SCRIPTS_DIR}/build.${TRAVIS_OS_NAME}.sh ${BUILD_TYPE} ${JOBS} ${COMPILER} ${THIRD_PARTY} ${TARGET}
+  - cd ${TRAVIS_BUILD_DIR}/build/output/${COMPILER}/${BUILD_TYPE}
+  - cpack -V
   - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then ${SCRIPTS_DIR}/test_package.linux.sh ${BUILD_TYPE} ${COMPILER} ; fi
 
 notifications:
