--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -35,7 +35,7 @@ build_script:
         }
 
 artifacts:
-  - path: $project_dir/build/output/msvc/Release/stage/pkg/*.msi
+  - path: C:/projects/dogen/build/output/msvc/Release/stage/pkg/dogen-0.95.0-Windows-AMD64.msi
     name: x86_64 MSI
 
 notifications:
