--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -35,7 +35,7 @@ build_script:
         }
 
 artifacts:
-  - path: C:/projects/dogen/build/output/msvc/Release/stage/pkg/dogen-0.95.0-Windows-AMD64.msi
+  - path: build/output/msvc/Release/stage/pkg/dogen-0.95.0-Windows-AMD64.msi
     name: x86_64 MSI
 
 notifications:
@@ -59,5 +59,5 @@ deploy:
     subject: domaindrivenconsulting
     repo: Dogen
     package: Dogen
-    artifact: C:/projects/dogen/build/output/msvc/Release/stage/pkg/dogen-0.95.0-Windows-AMD64.msi
+    artifact: build/output/msvc/Release/stage/pkg/dogen-0.95.0-Windows-AMD64.msi
     version: 0.94.0
