update verbose command line flag to fine grained log level
- instead of a single flag to control verbosity, there is now a new
  command line option to determine the level of logging. This change
  was done across all command line applications.
- version now uses the short form of -v
- minor tidy-ups around command line processing.

--- a/projects/input_models/CMakeLists.txt
+++ b/projects/input_models/CMakeLists.txt
@@ -24,7 +24,7 @@ if (DOGEN_KNITTER_COMMAND)
     set(ignore_regexes ${ignore_regexes} --ignore-files-matching-regex .*/test/.*)
     set(ignore_regexes ${ignore_regexes} --ignore-files-matching-regex .*/tests/.*)
 
-    set(other_options --verbose)
+    set(other_options --log_level debug)
     set(other_options ${other_options} --delete-extra-files)
 
     set(common_arguments --output-dir ${projects_dir}/)
