--- a/test_data/CMakeLists.txt
+++ b/test_data/CMakeLists.txt
@@ -121,7 +121,7 @@ if (DOGEN_TAILOR_COMMAND)
             add_custom_target(tailor_${model_name}
                 COMMENT "Tailoring ${model_name}."
                 WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
-                COMMAND ${DOGEN_TAILOR_COMMAND} -v --target ${sample} --output ${output_dir}/${model_name}.json)
+                COMMAND ${DOGEN_TAILOR_COMMAND} --log_level=debug --target ${sample} --output ${output_dir}/${model_name}.json)
 
             add_dependencies(tailor_all tailor_${model_name})
         endif()
